Margin Fix/Horizontal Scrolling and New Animations

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Arial';
     background: #ffffff;
-    margin-right: 0%;
+    overflow-x: hidden;
 }
 
 .clearfix {
